<resources>
    <string name="app_name">GamerGuides</string>
    <string name="lorem_ipsum_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras placerat nisi id
        scelerisque convallis. Ut sagittis, leo nec posuere luctus, velit nisi ultrices nunc, sit amet vehicula lacus
        orci et mauris. Nunc non massa scelerisque, finibus odio eu, sagittis nisi.
    </string>
    <string name="pilihan_game_title">Pilihan Game</string>
    <string name="kursus_saya_title">Kursus Saya</string>
    <string name="tambahkan_kursus_title">Tambahkan Kursus</string>
    <string name="nama_kursus_form_title">Nama Kursus</string>
    <string name="thumbnail_form_title">Thumbnail</string>
    <string name="deskripsi_kursus_form_title">Deskripsi Kursus</string>
    <string name="kategori_games_form_title">Kategori Games</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sample">SAMPLE</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tambahkan_button">Tambahkan</string>
    <string name="akun_title">Akun</string>
    <string name="edit_kursus_title">Edit Kursus</string>
    <string name="simpan_button">Simpan</string>
    <string name="tambahkan_video_title">Tambahkan Video</string>
    <string name="nama_video_title">Nama Video</string>
    <string name="deskripsi_video_title">Deskripsi Video</string>
    <string name="link_video_title">Link Video</string>
    <string name="edit_video_title">Edit Video</string>
    <string name="daftar_favorite_title">Daftar Favorite</string>
    <string name="get_started_text">Ayo temukan dan pelajari game kesukaanmu sekarang! <br/><br/>Hanya di Gamers Guide kamu
        bisa tingkatkan dan kuasai semua skillmu.
    </string>
    <string name="initial_sign_up_text">Segera temukan dan pelajari game kesukaanmu sekarang dengan mendaftarkan akunmu
        disini. <br/><br/>Apa yang kalian tunggu? Buatlah sebuah akun sekarang juga!
    </string>
</resources>