<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:background="@color/main_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".mainfragments.AddNewCourse">

    <ScrollView
            android:id="@+id/page_scroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/tambahkan_kursus_title"
                android:textColor="@color/main_textcolor"
                android:textSize="20sp" />

            <RelativeLayout
                    android:id="@+id/course_form_container"
                    android:layout_alignTop="@id/page_title"
                    android:layout_marginTop="100dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/course_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/nama_kursus_form_title"
                    android:textColor="@color/main_textcolor"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/course_title_input"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:layout_alignTop="@id/course_title"
                    android:layout_marginTop="27dp"
                    android:background="@drawable/user_text_input_background"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/course_thumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/course_title_input"
                    android:layout_marginTop="55dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/thumbnail_form_title"
                    android:textColor="@color/main_textcolor"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:id="@+id/course_thumbnail_input"
                    android:layout_width="match_parent"
                    android:layout_height="148dp"
                    android:layout_alignTop="@id/course_thumbnail"
                    android:layout_marginTop="27dp"
                    android:background="@drawable/user_text_input_background">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_baseline_add_photo_alternate_24" />

                </RelativeLayout>

                <TextView
                        android:id="@+id/course_description"
                        android:text="@string/deskripsi_kursus_form_title"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="16sp"
                        android:textColor="@color/main_textcolor"
                        android:layout_alignTop="@id/course_thumbnail_input"
                        android:layout_marginTop="164dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                />

                <EditText
                    android:id="@+id/course_description_input"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:layout_alignTop="@id/course_description"
                    android:layout_marginTop="27dp"
                    android:background="@drawable/user_text_input_background"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                        android:id="@+id/course_game_category"
                        android:text="@string/kategori_games_form_title"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="16sp"
                        android:textColor="@color/main_textcolor"
                        android:layout_alignTop="@id/course_description_input"
                        android:layout_marginTop="55dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                />

                <Spinner
                    android:id="@+id/course_game_category_input"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:layout_alignTop="@id/course_game_category"
                    android:layout_marginTop="27dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/user_text_input_background"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <android.widget.Button
                    android:id="@+id/add_course_button"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_alignTop="@id/course_game_category_input"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="75dp"
                    android:background="@drawable/main_button_background"
                    android:fontFamily="@font/montserrat_bold"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:text="@string/tambahkan_button"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />



            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>