<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditVideo">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/page_title"
                android:text="@string/edit_video_title"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="20sp"
                android:textColor="@color/main_textcolor"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />

        <RelativeLayout
                android:id="@+id/video_form_container"
                android:layout_alignTop="@id/page_title"
                android:layout_marginTop="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/video_title"
                    android:text="@string/nama_video_title"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    android:textColor="@color/main_textcolor"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />

            <EditText
                    android:id="@+id/video_title_input"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/user_text_input_background"
                    android:layout_alignTop="@id/video_title"
                    android:layout_marginTop="27dp"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
            />

            <TextView
                    android:id="@+id/video_thumbnail"
                    android:text="@string/thumbnail_form_title"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    android:textColor="@color/main_textcolor"
                    android:layout_alignTop="@id/video_title_input"
                    android:layout_marginTop="55dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />

            <RelativeLayout
                    android:id="@+id/video_thumbnail_input"
                    android:background="@drawable/user_text_input_background"
                    android:layout_alignTop="@id/video_thumbnail"
                    android:layout_marginTop="27dp"
                    android:layout_width="match_parent"
                    android:layout_height="148dp">

                <ImageView
                        android:src="@drawable/ic_baseline_add_photo_alternate_24"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_centerInParent="true"/>

                <ImageView
                        android:id="@+id/video_thumbnail_result"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"/>

            </RelativeLayout>

            <TextView
                    android:id="@+id/video_description"
                    android:text="@string/deskripsi_video_title"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    android:textColor="@color/main_textcolor"
                    android:layout_alignTop="@id/video_thumbnail_input"
                    android:layout_marginTop="164dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />

            <EditText
                    android:id="@+id/video_description_input"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="16sp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/user_text_input_background"
                    android:layout_alignTop="@id/video_description"
                    android:layout_marginTop="27dp"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
            />

            <TextView
                    android:id="@+id/video_url_title"
                    android:text="@string/link_video_title"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    android:textColor="@color/main_textcolor"
                    android:layout_alignTop="@id/video_description_input"
                    android:layout_marginTop="55dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />

            <EditText
                    android:id="@+id/video_url_input"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="41dp"
                    android:layout_alignTop="@id/video_url_title"
                    android:layout_marginTop="27dp"
                    android:background="@drawable/user_text_input_background"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

            <android.widget.Button
                    android:id="@+id/save_video_button"
                    android:text="@string/simpan_button"
                    android:textAllCaps="false"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_alignTop="@id/video_url_input"
                    android:layout_marginTop="75dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/main_button_background"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
            />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>